--- a/Sample_BLE/build.gradle
+++ b/Sample_BLE/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     ext.kotlin_version = '1.3.31'
     ext.nav_version = '2.1.0-alpha05'
+    ext.commonsLangVersion = '3.7'
     repositories {
         google()
         jcenter()
